# themecp-backend-v2

./: Dockerfile  README.md  pyproject.toml
api/: app.py  config.py  error_constants.py  utils.py
api/auth/: auth_repository.py  auth_response_models.py  auth_service.py  auth_views.py
api/contest_level/: contest_level_model.py  contest_level_repository.py  contest_level_response_model.py  contest_level_service.py
api/contest_session/: contest_session_model.py  contest_session_repository.py  contest_session_response_model.py  contest_session_service.py  contest_session_views.py
api/db/: pg_database.py
api/user/: user_model.py  user_repository.py  user_response_models.py  user_service.py  user_utils.py  user_views.py
contest_session/: contest_session_response_model.py  contest_session_service.py  contest_session_views.py
local_setup/: docker-compose.yml
local_setup/data/pg_data/: postmaster.pid
local_setup/data/pg_data/base/1/: 2619  2696  2840  2841
local_setup/data/pg_data/base/16384/: 1247  1249  1249_fsm  1259  1259_vm  13462  2224  24577  24580  24582  24586  24587  24589  24606  24607  24611  24613  24619  2579  (+31 more)
local_setup/data/pg_data/global/: 1260  1262  2671  2672  2676  pg_control  pg_internal.init
local_setup/data/pg_data/pg_stat/: pgstat.stat
local_setup/data/pg_data/pg_xact/: 0000
migrations/: env.py
migrations/versions/: 160f825a5df5_add_performance_in_contestlevel.py  637771ec32bd_contest_session_and_level_sheet_v2.py  6bb5ae891935_first_migration.py  780b73967c5a_contest_session_and_level_sheet.py  dbab7128859b_user_table.py
(+1 files in other folders)
